Add a MIDI drum nightmare header

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 
-
+  <div>
+    <h1>Press the corresponding key on your keyboard to re-live the MIDI drum sound nightmare of the 90s</h1>
+  </div>
   <div class="keys">
     <div data-key="65" class="key">
       <kbd>A</kbd>
